feat: add icon mapper type

--- a/packages/rn-icon-mapper/package.json
+++ b/packages/rn-icon-mapper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-icon-mapper",
   "version": "0.0.0-alpha.1",
-  "description": "A lightweight utility for mapping icons names between **SF Symbols**, **Material Icons**, and **Material Community Icons**.",
+  "description": "A lightweight utility for mapping icon names between SF Symbols, Material Icons, and Material Community Icons.",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
