chore: bump to v0.0.1

--- a/packages/rn-icon-mapper/package.json
+++ b/packages/rn-icon-mapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-icon-mapper",
-  "version": "0.0.0-alpha.1",
+  "version": "0.0.1",
   "description": "A lightweight utility for mapping icon names between SF Symbols, Material Icons, and Material Community Icons.",
   "license": "MIT",
   "main": "dist/index.js",
